# ModernCppTemplate

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/: 99-pico.rules  analyzers.cmake  code-coverage.cmake  compiler.cmake  conan.cmake  doxygen.cmake  sanitizers.cmake  settings.cmake  sources.cmake  utils.cmake  vcpkg.cmake
cubeMX/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_i2c.c
include/tmp/: tmp.h
src/: main.c  main.cpp
src/tmp/: tmp.c  tmp.cpp
test/: CMakeLists.txt  mainTest.c  mainTest.cpp  tmpTest.c  tmpTest.h
test/src/: tmp_test.cpp
tools/linux/: config.sh  upload.sh
